--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 10px auto 0px;
+    margin: 10px auto;
     align-items: center;
 }
 .logo-header{
