--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 @import url(reset.css);
+@import url(nice-select.css);
+@import url(vocab.css);
+@import url(slick.css);
 @import url(media.css);
 @import url(header.css);
 @import url(main.css);
