--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
     position: relative;
     z-index: 0;
 }
-#feedback::before{
+#feedback::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -24,8 +24,8 @@
 }
 
 .container {
-    max-width: 1440px;
-    width: 100%;
+    /* max-width: 1440px;
+    width: 100%; */
 
 }
 .feedback__container {
@@ -38,8 +38,10 @@
     padding: 35px 30px;
     border-radius: 20px;
     margin-right: 95px;
+    max-width: 300px;
 }
 .form_title {
+    font-family: 'icomoon';
     margin-bottom: 25px;
     color: var(--purple-text);
     font-size: 25.64px;
@@ -102,6 +104,10 @@ form {
     letter-spacing: 0;
     cursor: pointer;
 }
+#form_button:hover{
+    transform: scale(1.02);
+    transition: 0.5s;
+}
 .feedback__lozung {
     position: relative;
     z-index: 2;
@@ -113,7 +119,8 @@ form {
     margin-bottom: 13px;
 }
 .lozung_title {
-    max-width: 480px;
+    font-family: 'icomoon';
+    max-width: 530px;
     width: 100%;
     font-size: 48px;
     font-weight: 400;
@@ -123,7 +130,8 @@ form {
 
 }
 .lozung_subtitle {
-    max-width: 450px;
+    font-family: 'FREESCPT';
+    max-width: 300px;
     font-size: 40px;
     font-weight: 400;
     line-height: -1px;
@@ -132,7 +140,7 @@ form {
 }
 
 /* classes */
-#our_classes{
+#our_classes {
     margin-bottom: 215px;
 }
 .our-classes__container {
@@ -178,8 +186,7 @@ form {
     margin-right: 30px;
 
 }
-.our-classes-item__img img {
-}
+.our-classes-item__img img {}
 
 .our-classes-item__text {
     padding: 45px 45px 45px 0;
@@ -206,39 +213,37 @@ form {
 }
 
 /* photo-grid */
-#photo-grid{
+#photo-grid {
     margin-bottom: 175px;
 }
-.photo-grid__container {
-    
-}
+.photo-grid__container {}
 .photo-grid__rows {
-    display: flex;
-    justify-content: center;
-    max-height: 380px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    min-height: 380px;
     height: 100%;
-    margin-bottom: -3px;
-    /* background-color: var(--purple); */
 
 }
 .photo-grid-item {
     position: relative;
     background-color: var(--purple);
 }
-.photo-grid-item img{
+.photo-grid-item img {
+
+    object-fit: cover;
     position: relative;
     width: 100%;
     height: 100%;
     opacity: 1;
     transition: 0.5s;
 }
-.photo-grid-item img:hover{
+.photo-grid-item img:hover {
     opacity: 0.3;
-    transition: 0.5s ;
+    transition: 0.5s;
 }
-.photo-grid-item:hover::before{
+.photo-grid-item:hover::before {
     content: '';
-    background-image: url(../img/search-2.png);
+    background-image: url("../img/search-2.png");
     background-size: contain;
     background-repeat: no-repeat;
     width: 50px;
@@ -254,37 +259,44 @@ form {
 }
 
 /* about us */
-#about-us{
+#about-us {
     margin-bottom: 165px;
 }
-.about-us__container{
-display: flex;
-margin: 0 auto;
-justify-content: center;
-    
+.about-us__container {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+
 }
-.about-us__text{
-max-width: 460px;
-margin-right: 140px;
-margin-top: 25px;
+.about-us__text {
+    max-width: 460px;
+    margin-right: 140px;
+    margin-top: 25px;
 }
 .about-us__title {
     font-size: 30px;
-font-weight: 400;
-line-height: -1px;
-letter-spacing: 0px;
-color: var(--purple-text);
-margin-bottom: 30px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    color: var(--purple-text);
+    margin-bottom: 30px;
 }
 .about-us__description {
     font-size: 14px;
-font-weight: 400;
-line-height: 140%;
-letter-spacing: 0px;
-color: var(--grey-subtitle);
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0;
+    color: var(--grey-subtitle);
 }
-.photo__slick__container{
+.photo__slick__container {
     box-shadow: 0 0 5px #6f6f6f;
+    
+}
+.about-us__image{
+
+}
+.about-us__image img{
+    object-fit: contain;
 }
 .slider_wrap {
     max-width: 600px;
@@ -308,13 +320,13 @@ color: var(--grey-subtitle);
 .slick-prev {
     transform: rotate(180deg);
 }
-.slider_wrap{
+.slider_wrap {
     position: relative;
 }
-.photo__slider-arrow{
+.photo__slider-arrow {
     position: absolute;
-    left: -15px;  
-    top:50%;
+    left: -15px;
+    top: 50%;
     display: flex;
     justify-content: space-between;
     width: 600px;
@@ -324,7 +336,7 @@ color: var(--grey-subtitle);
 
 /* icons */
 
-#icons{
+#icons {
     background-image: url("../img/bg-02.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -333,7 +345,7 @@ color: var(--grey-subtitle);
     position: relative;
     z-index: 0;
 }
-#icons::before{
+#icons::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -346,21 +358,21 @@ color: var(--grey-subtitle);
     z-index: -1;
 }
 
-.icons__container{
+.icons__container {
     margin: 0 auto;
 }
-.icons__grid{
+.icons__grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 35px;
-  grid-row-gap: 60px;
+    grid-row-gap: 60px;
 }
-.icons-grid__item{
+.icons-grid__item {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.icons__img{
+.icons__img {
     border: 2px solid var(--white);
     border-radius: 100%;
     width: 70px;
@@ -370,7 +382,7 @@ color: var(--grey-subtitle);
     align-items: center;
     margin-bottom: 30px;
 }
-.icons__img img{
+.icons__img img {
     max-width: 50px;
     max-height: 50px;
     height: 100%;
@@ -380,21 +392,261 @@ color: var(--grey-subtitle);
 .icons__title {
     color: var(--white);
     font-size: 18px;
-font-weight: 400;
-line-height: -1px;
-letter-spacing: 0px;
-margin-bottom: 20px;
-max-width: 265px;
-text-align: center;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    margin-bottom: 20px;
+    max-width: 265px;
+    text-align: center;
 }
 .icons__description {
     color: var(--white);
     font-size: 16px;
-font-weight: 400;
-line-height: 140%;
-letter-spacing: 0px;
-max-width: 265px;
-text-align: center;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0;
+    max-width: 265px;
+    text-align: center;
 }
 
 /*  */
+
+#price {
+    background-image: url("../img/bg-03.jpg");
+    background-repeat: no-repeat;
+    padding: 100px 0;
+    background-position: right bottom;
+    position: relative;
+}
+#price::after {
+    content: '';
+    background-color: var(--purple);
+    opacity: 0.1;
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    max-width: 1075px;
+    width: 100%;
+    height: 100%;
+}
+.price_container {
+    margin: 100px auto;
+    position: relative;
+    z-index: 99;
+}
+.price__row {
+    margin: 0 auto;
+    display: flex;
+    margin-right: -30px;
+    justify-content: center;
+    /* max-width: 1170px;
+    justify-content: space-between; */
+}
+.price__item {
+    background-color: var(--white);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 0 25px #7e7e7e;
+    margin-right: 30px;
+}
+.price-item__tarrif {
+    background-color: var(--purple);
+    border-radius: 20px 20px 0 0;
+    padding: 32px 70px 48px 102px;
+    font-size: 67.35px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    color: var(--white);
+    width: 100%;
+}
+.price-item__info {
+    padding: 45px 70px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.price-item__tarrif::before {
+    content: '$';
+    font-size: 32px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    vertical-align: middle;
+    margin-right: 15px;
+    column-rule: var(--white);
+}
+.price-item__tarrif::after {
+    content: '/ MONTH';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    color: var(--white);
+
+}
+.price-item__advicer,
+.price-item__date,
+.price-item__time {
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0;
+    color: var(--grey-subtitle);
+}
+.price-item__date::after,
+.price-item__time::after {
+    content: '';
+    width: 100px;
+    height: 1px;
+    background-color: var(--grey-line);
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: calc(0% - 22px);
+    transform: translate(-50%, 0);
+}
+
+
+.price-item__date,
+.price-item__time {
+    position: relative;
+}
+.price-item__advicer,
+.price-item__date,
+.price-item__time {
+    margin-bottom: 45px;
+}
+.price-item__button {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    color: var(--white);
+    background-color: var(--purple);
+    border-radius: 20px;
+    padding: 15px 50px;
+    cursor: pointer;
+}
+
+.price-item__button:hover{
+    transform: scale(1.02);
+    transition: 0.5s;
+}
+
+/* footer */
+footer {
+    background-color: var(--purple);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.footer__container{
+    display: flex;
+    padding: 95px 12px 100px 12px;
+ 
+}
+
+.footer__about {
+    max-width: 460px;
+    margin-right: 140px;
+}
+.footer-about__title {
+    margin-bottom: 50px;
+    font-size: 18px;
+font-weight: 400;
+line-height: -1px;
+letter-spacing: 0px;
+color: var(--white);
+}
+.footer-about_description {
+    font-size: 14px;
+font-weight: 400;
+line-height: 150%;
+letter-spacing: 0px;
+color: var(--white);
+margin-bottom: 70px;
+}
+.footer__social-media{
+display: flex;
+max-width: 195px;
+justify-content: space-between;
+}
+.social-media__icon {
+    max-width: 20px;
+    max-height: 20px;
+
+}
+.social-media__icon img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.footer__contacts {
+    display: flex;
+    margin-right: -100px;
+}
+.contacts__title {
+    margin-bottom: 60px ;
+    color:var(--white);
+    font-size: 18px;
+font-weight: 400;
+line-height: -1px;
+letter-spacing: 0px;
+}
+.contacts__row {
+    margin-right: 100px;
+    margin-bottom: -50px;
+    /* display: flex; */
+}
+.contacts__item {
+    display: flex;
+    font-size: 14px;
+font-weight: 400;
+line-height: -1px;
+letter-spacing: 0px;
+color: var(--white);
+margin-bottom: 30px;
+}
+.contacts__location {
+}
+.contacts-item__img {
+    max-width: 20px;
+    max-height: 20px;
+    margin-right: 10px;
+}
+.contacts-item__img img{
+    width: 100%;
+    height: 100%;
+}
+.contacts-item__info {
+}
+.contacts__postal {
+}
+.contacts__phone {
+}
+.contacts__site {
+}
+
+
+
+
+.footer__down {
+    background-color: rgb(83, 99, 216);
+    padding: 40px 0;
+    display: flex;
+    justify-content: center;
+    color: rgb(183, 191, 252);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: -1px;
+    letter-spacing: 0;
+    width: 100%;
+
+}
