--- a/assets/css/vocab.css
+++ b/assets/css/vocab.css
@@ -6,4 +6,5 @@
     --placeholder-color:rgb(136, 136, 136);
     --grey:rgb(242, 242, 242);
     --purple-text:rgb(83, 99, 219);
+    --grey-line:rgb(215, 215, 215);
 }
