--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,12 +2,16 @@
     max-width: 1400px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin: 10px auto;
     align-items: center;
 }
 .logo-header{
     margin-right: 500px;
+    margin-left: 30px;
+}
+.logo-header__burger{
+ display:none  ;
 }
 .site-nav .menu{
     max-width: 450px;
