--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -2,7 +2,7 @@
     /* header */
     /* header */
     header .logo-header{
-        display: none;
+       
     }
     header .logo-header__burger{
         display: block;
@@ -113,17 +113,45 @@
         grid-template-columns: 1fr 1fr;
     }
 
-
+#about-us{
+    margin-bottom: 20px;
+    padding: 12px;
+}
 #about-us .about-us__container{
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 #about-us .about-us__text{
     margin-bottom: 30px;
     margin-right: 0px;
 }
-
-
+#about-us .slick-track{
+    max-width: 500px;
+}
+#about-us .about-us__image{
+    max-width: 500px;
+}
+#about-us .about-us__image img{
+    width: 100%;
+}
+#about-us .photo__slider-arrow {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+    display: flex;
+    justify-content: space-between;
+    max-width: 550px;
+    z-index: 99;
+    transform: translate(-50%, -25%);
+}
+#about-us .slider_wrap{
+    display: flex;
+    align-items: center;
+}
+#about-us .photo__slider{
+    
+}
 
 
     #icons .icons__grid{
@@ -134,6 +162,7 @@
     #price .price__row{
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
     #price .price__item{
         margin-right: 0px;
@@ -155,4 +184,31 @@
         margin-bottom: 0px;
         margin-right: 0px;
     }
+}
+
+@media (max-width:569px){
+    #about-us .slick-track{
+        max-width: 300px;
+    }
+    #about-us .about-us__image{
+        max-width: 300px;
+    }
+    #about-us .about-us__image img{
+        width: 100%;
+    }
+    #about-us .photo__slider-arrow {
+        position: absolute;
+        left: 50%;
+        top: 25%;
+        display: flex;
+        justify-content: space-between;
+        max-width: 320px;
+        z-index: 99;
+        transform: translate(-50%, -25%);
+    }
+    #about-us .slick-arrow {
+        width: 20px;
+        height: 20px;
+    }
+    
 }
