--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,8 +6,11 @@
     margin: 10px auto;
     align-items: center;
 }
+.menu-icon{
+    display: none;
+}
 .logo-header{
-    margin-right: 500px;
+    margin-right: 50px;
     margin-left: 30px;
 }
 .logo-header__burger{
