--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -2,17 +2,19 @@
     /* header */
     /* header */
     header .logo-header{
-       
+
+       margin-right: auto;
+       margin-left: 30px;
     }
     header .logo-header__burger{
         display: block;
         margin-left: 30px;
-        margin-top: 20px;
+        margin-top: 10px;
     }
     header .site-nav {
         position: relative;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
     }
     header .menu-icon {
         position: absolute;
@@ -84,7 +86,7 @@
         margin: 0 auto;
         align-items: center;
     }
-
+   
     #our_classes .our-classes__rows{
         grid-template-columns: 1fr;
     }
@@ -163,6 +165,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-right: 0px;
     }
     #price .price__item{
         margin-right: 0px;
